vlib/v/checker/tests/unknown_as_type.out
vlib/v/checker/tests/unknown_as_type.vv:7:9: error: unknown type `Stringg`.
Did you mean `String`?
    5 |
    6 | fn foo(e Expr) {
    7 |     x := e as Stringg
      |            ~~
    8 |     println(x)
    9 | }
